Write documentation. A small code refactoring.
