# docs/swagger.json
@@ -27,7 +27,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/handlers.HealthCheckResponse"
+                            "$ref": "#/definitions/responses.HealthCheckResponse"
                         }
                     }
                 }
@@ -73,7 +73,7 @@
                     {
                         "type": "string",
                         "default": "",
-                        "description": "first_name",
+                        "description": "first_name or last_name or email",
                         "name": "searchTerm",
                         "in": "query"
                     }
@@ -230,7 +230,7 @@
         },
         "/users/login": {
             "post": {
-                "description": "Login a user and return a pair of access and refresh token in the response",
+                "description": "Return a pair of access and refresh token in the response",
                 "consumes": [
                     "application/json"
                 ],
@@ -498,15 +498,6 @@
         }
     },
     "definitions": {
-        "handlers.HealthCheckResponse": {
-            "type": "object",
-            "properties": {
-                "Status": {
-                    "type": "string",
-                    "example": "success"
-                }
-            }
-        },
         "requests.CreateUserRequest": {
             "type": "object",
             "required": [
@@ -610,6 +601,15 @@
                 },
                 "message": {
                     "type": "string"
+                }
+            }
+        },
+        "responses.HealthCheckResponse": {
+            "type": "object",
+            "properties": {
+                "Status": {
+                    "type": "string",
+                    "example": "success"
                 }
             }
         },
