# internal/handlers/responses/healthCheckResponses.go
@@ -1,0 +1,5 @@
+package responses
+
+type HealthCheckResponse struct {
+	Status string `json:"Status" example:"success"`
+}
